fix regex for downloading, add generic LATEST notebook example

--- a/ecmwf_tc_forecasts_example_KIKO.ipynb
+++ b/ecmwf_tc_forecasts_example_KIKO.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "id": "6634a87a",
    "metadata": {},
-   "source": [
-    "# ECMWF Tropical Cyclone Data Extractor - Example"
-   ]
+   "source": "# ECMWF Tropical Cyclone Data Extractor - KIKO Example"
   },
   {
    "cell_type": "markdown",
@@ -29,15 +27,15 @@
    "id": "755e7190",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:26:39.267449Z",
-     "start_time": "2025-09-15T08:26:39.162121Z"
+     "end_time": "2025-09-18T12:41:12.139676Z",
+     "start_time": "2025-09-18T12:41:12.136545Z"
     }
    },
    "source": [
     "from ecmwf_tc_data_downloader import download_tc_data, list_available_storms"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -52,8 +50,8 @@
    "id": "6ff85008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:26:40.995295Z",
-     "start_time": "2025-09-15T08:26:40.069713Z"
+     "end_time": "2025-09-18T12:41:12.837266Z",
+     "start_time": "2025-09-18T12:41:12.148678Z"
     }
    },
    "source": [
@@ -69,40 +67,13 @@
      "output_type": "stream",
      "text": [
       "Found 1 forecast dates\n",
-      "   Found 51 tropical cyclone track files\n",
-      "Found 27 unique storms\n",
-      "Found 27 unique storms:\n",
-      " 1. MARIO    at 19p1degN    , -111p1degW   (Forecast: 20250915000000)\n",
-      " 2. 70W      at 12p6degN    , 118p4degE    (Forecast: 20250915000000)\n",
-      " 3. 71W      at 13p3degN    , 126p3degE    (Forecast: 20250915000000)\n",
-      " 4. 74W      at 9p2degN     , 151p8degE    (Forecast: 20250915000000)\n",
-      " 5. 75W      at 7p2degN     , 105p5degE    (Forecast: 20250915000000)\n",
-      " 6. 76W      at 33p4degN    , 139p5degE    (Forecast: 20250915000000)\n",
-      " 7. 77W      at 16p9degN    , 102p2degE    (Forecast: 20250915000000)\n",
-      " 8. 78W      at 18p1degN    , 126p9degE    (Forecast: 20250915000000)\n",
-      " 9. 80W      at 15p6degN    , 133p3degE    (Forecast: 20250915000000)\n",
-      "10. 70E      at 18p6degN    , -110p7degW   (Forecast: 20250915000000)\n",
-      "11. 71E      at 12p6degN    , -108p8degW   (Forecast: 20250915000000)\n",
-      "12. 72E      at 12p2degN    , -94p1degW    (Forecast: 20250915000000)\n",
-      "13. 74E      at 11p9degN    , -89p4degW    (Forecast: 20250915000000)\n",
-      "14. 72L      at 12p7degN    , -33p1degW    (Forecast: 20250915000000)\n",
-      "15. 73L      at 8p9degN     , -24p7degW    (Forecast: 20250915000000)\n",
-      "16. 75L      at 12p4degN    , -29p1degW    (Forecast: 20250915000000)\n",
-      "17. 76L      at 11p9degN    , -25p2degW    (Forecast: 20250915000000)\n",
-      "18. 77L      at 11p2degN    , -82p5degW    (Forecast: 20250915000000)\n",
-      "19. 78L      at 18p8degN    , -93p2degW    (Forecast: 20250915000000)\n",
-      "20. 79L      at 17p1degN    , -51p7degW    (Forecast: 20250915000000)\n",
-      "21. 70C      at 8p7degN     , -175p7degW   (Forecast: 20250915000000)\n",
-      "22. 72C      at 10p7degN    , -161p5degW   (Forecast: 20250915000000)\n",
-      "23. 73C      at 9p3degN     , -160p9degW   (Forecast: 20250915000000)\n",
-      "24. 70A      at 27p5degN    , 67p7degE     (Forecast: 20250915000000)\n",
-      "25. 70B      at 17p2degN    , 85p2degE     (Forecast: 20250915000000)\n",
-      "26. 71B      at 17p6degN    , 86p6degE     (Forecast: 20250915000000)\n",
-      "27. 72B      at 17p1degN    , 88p3degE     (Forecast: 20250915000000)\n"
+      "   Found 4 tropical cyclone track files\n",
+      "Found 0 unique storms\n",
+      "Found 0 unique storms:\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -113,35 +84,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "id": "63307159",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T08:52:12.921549Z",
-     "start_time": "2025-09-12T08:52:12.260215Z"
+     "end_time": "2025-09-18T12:41:17.309566Z",
+     "start_time": "2025-09-18T12:41:12.846412Z"
     }
    },
-   "source": "results = download_tc_data(limit=2)",
+   "cell_type": "code",
+   "source": "results = download_tc_data(limit=1, start_date='20250910', end_date='20250910', storm_name='KIKO', output_dir='tc_kiko')",
+   "id": "7293eaef1e7ee861",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1 forecast dates\n",
-      "Processing 1 forecast(s)\n",
+      "Found 122 forecast dates\n",
+      "Processing 4 forecast(s)\n",
       "Filtering for storm: KIKO\n",
       "\n",
-      "   Found 0 tropical cyclone track files\n",
-      "   Warning: No tropical cyclone files found for 20250912000000\n",
+      "   Found 2 tropical cyclone track files\n",
+      "   Storm: KIKO at 22p9degN, -158p1degW\n",
+      "   Downloaded: A_JSXX02ECEP101800_C_ECMP_20250910180000_tropical_cyclone_track_KIKO_-158p1degW_22p9degN_bufr4.bin (11,508 bytes)\n",
+      "   Downloaded: A_JSXX02ECMF101800_C_ECMP_20250910180000_tropical_cyclone_track_KIKO_-158p1degW_22p9degN_bufr4.bin (214 bytes)\n",
+      "\n",
+      "   Found 2 tropical cyclone track files\n",
+      "   Storm: KIKO at 22p7degN, -157p5degW\n",
+      "   Downloaded: A_JSXX02ECEP101200_C_ECMP_20250910120000_tropical_cyclone_track_KIKO_-157p5degW_22p7degN_bufr4.bin (8,877 bytes)\n",
+      "   Downloaded: A_JSXX02ECMF101200_C_ECMP_20250910120000_tropical_cyclone_track_KIKO_-157p5degW_22p7degN_bufr4.bin (214 bytes)\n",
+      "\n",
+      "   Found 2 tropical cyclone track files\n",
+      "   Storm: KIKO at 22p4degN, -156p5degW\n",
+      "   Downloaded: A_JSXX02ECEP100600_C_ECMP_20250910060000_tropical_cyclone_track_KIKO_-156p5degW_22p4degN_bufr4.bin (8,004 bytes)\n",
+      "   Downloaded: A_JSXX02ECMF100600_C_ECMP_20250910060000_tropical_cyclone_track_KIKO_-156p5degW_22p4degN_bufr4.bin (214 bytes)\n",
+      "\n",
+      "   Found 2 tropical cyclone track files\n",
+      "   Storm: KIKO at 22p7degN, -155p7degW\n",
+      "   Downloaded: A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin (25,289 bytes)\n",
+      "   Downloaded: A_JSXX02ECMF100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin (214 bytes)\n",
+      "\n",
       "==================================================\n",
       "Summary:\n",
-      "   Successfully downloaded: 0 files\n",
+      "   Successfully downloaded: 8 files\n",
       "   Failed downloads: 0 files\n",
-      "   Files saved to: tc_data/\n"
+      "   Files saved to: tc_kiko/\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -152,30 +141,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:31:37.005157Z",
-     "start_time": "2025-09-15T07:31:36.713952Z"
+     "end_time": "2025-09-18T12:41:17.327506Z",
+     "start_time": "2025-09-18T12:41:17.325899Z"
     }
    },
    "cell_type": "code",
    "source": "from ecmwf_tc_data_extractor import extract_tc_data, extract_tc_data_from_file",
    "id": "d947daee521a3c37",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:31:37.064586Z",
-     "start_time": "2025-09-15T07:31:37.009593Z"
+     "end_time": "2025-09-18T12:41:17.373425Z",
+     "start_time": "2025-09-18T12:41:17.335116Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Extract data from the downloaded KIKO storm file\n",
-    "filename = 'tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin'\n",
+    "filename = 'tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin'\n",
     "\n",
     "# Extract using the main function (saves to CSV automatically)\n",
-    "result = extract_tc_data_from_file(filename)"
+    "result = extract_tc_data_from_file(filename, output_dir='tc_kiko')"
    ],
    "id": "a98e7a9a471fa85f",
    "outputs": [
@@ -183,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting tropical cyclone data from: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin\n",
+      "Extracting tropical cyclone data from: tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin\n",
       "Stage 1: Reading BUFR file structure...\n",
       "Storm: 11E, Ensemble Members: 52\n",
       "Forecast Base Time: 2025-09-10 00:00:00\n",
@@ -233,17 +222,17 @@
       "  8. Member 20, 6h: 51kt at 0° (23.50, -155.80)\n",
       "  9. Member 42, 6h: 64kt at 0° (23.40, -154.90)\n",
       "  10. Member 11, 12h: 35kt at 90° (24.20, -155.70)\n",
-      "Data saved to: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
+      "Data saved to: tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
       "==================================================\n",
       "Summary:\n",
       "   Successfully extracted: 4163 records\n",
       "   Wind radii records: 123\n",
-      "   CSV file: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
+      "   CSV file: tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
       "==================================================\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -254,8 +243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:31:39.393168Z",
-     "start_time": "2025-09-15T07:31:39.361374Z"
+     "end_time": "2025-09-18T12:41:17.397945Z",
+     "start_time": "2025-09-18T12:41:17.377244Z"
     }
    },
    "cell_type": "code",
@@ -313,7 +302,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -324,8 +313,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:03.357280Z",
-     "start_time": "2025-09-16T12:16:02.920346Z"
+     "end_time": "2025-09-18T12:41:17.411383Z",
+     "start_time": "2025-09-18T12:41:17.409995Z"
     }
    },
    "cell_type": "code",
@@ -342,19 +331,19 @@
    ],
    "id": "b168d081ce1d02c",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:03.401303Z",
-     "start_time": "2025-09-16T12:16:03.362090Z"
+     "end_time": "2025-09-18T12:41:17.454855Z",
+     "start_time": "2025-09-18T12:41:17.415860Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load the extracted data\n",
-    "csv_file = 'tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv'\n",
+    "csv_file = 'tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv'\n",
     "\n",
     "# Load data\n",
     "df = load_tc_data(csv_file)\n",
@@ -394,7 +383,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -405,8 +394,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:03.647422Z",
-     "start_time": "2025-09-16T12:16:03.404837Z"
+     "end_time": "2025-09-18T12:41:17.706147Z",
+     "start_time": "2025-09-18T12:41:17.469346Z"
     }
    },
    "cell_type": "code",
@@ -427,7 +416,7 @@
      }
     }
    ],
-   "execution_count": 3
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -438,8 +427,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:03.861538Z",
-     "start_time": "2025-09-16T12:16:03.652406Z"
+     "end_time": "2025-09-18T12:41:17.909627Z",
+     "start_time": "2025-09-18T12:41:17.710651Z"
     }
    },
    "cell_type": "code",
@@ -467,7 +456,7 @@
      }
     }
    ],
-   "execution_count": 4
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -478,8 +467,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:04.035978Z",
-     "start_time": "2025-09-16T12:16:03.875862Z"
+     "end_time": "2025-09-18T12:41:18.063482Z",
+     "start_time": "2025-09-18T12:41:17.916029Z"
     }
    },
    "cell_type": "code",
@@ -508,7 +497,7 @@
      }
     }
    ],
-   "execution_count": 5
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -519,8 +508,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:04.108266Z",
-     "start_time": "2025-09-16T12:16:04.043261Z"
+     "end_time": "2025-09-18T12:41:18.135900Z",
+     "start_time": "2025-09-18T12:41:18.067523Z"
     }
    },
    "cell_type": "code",
@@ -541,7 +530,7 @@
      }
     }
    ],
-   "execution_count": 6
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -552,8 +541,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:16:04.961882Z",
-     "start_time": "2025-09-16T12:16:04.433606Z"
+     "end_time": "2025-09-18T12:41:18.655958Z",
+     "start_time": "2025-09-18T12:41:18.139909Z"
     }
    },
    "cell_type": "code",
@@ -574,15 +563,20 @@
      }
     }
    ],
-   "execution_count": 7
+   "execution_count": 34
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-18T12:41:18.660633Z",
+     "start_time": "2025-09-18T12:41:18.659466Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "5bd848c4aa23136a"
+   "id": "5bd848c4aa23136a",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
