--- a/ecmwf_tc_forecasts_example_MARIO.ipynb
+++ b/ecmwf_tc_forecasts_example_MARIO.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "id": "6634a87a",
    "metadata": {},
-   "source": [
-    "# ECMWF Tropical Cyclone Data Extractor - Example"
-   ]
+   "source": "# ECMWF Tropical Cyclone Data Extractor - MARIO Example"
   },
   {
    "cell_type": "markdown",
@@ -29,15 +27,15 @@
    "id": "755e7190",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:43:15.286481Z",
-     "start_time": "2025-09-15T08:43:15.217425Z"
+     "end_time": "2025-09-18T12:23:01.468250Z",
+     "start_time": "2025-09-18T12:23:01.384186Z"
     }
    },
    "source": [
     "from ecmwf_tc_data_downloader import download_tc_data, list_available_storms"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -52,8 +50,8 @@
    "id": "6ff85008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:43:16.064572Z",
-     "start_time": "2025-09-15T08:43:15.289204Z"
+     "end_time": "2025-09-18T12:23:02.229845Z",
+     "start_time": "2025-09-18T12:23:01.473925Z"
     }
    },
    "source": [
@@ -69,40 +67,13 @@
      "output_type": "stream",
      "text": [
       "Found 1 forecast dates\n",
-      "   Found 51 tropical cyclone track files\n",
-      "Found 27 unique storms\n",
-      "Found 27 unique storms:\n",
-      " 1. MARIO    at 19p1degN    , -111p1degW   (Forecast: 20250915000000)\n",
-      " 2. 70W      at 12p6degN    , 118p4degE    (Forecast: 20250915000000)\n",
-      " 3. 71W      at 13p3degN    , 126p3degE    (Forecast: 20250915000000)\n",
-      " 4. 74W      at 9p2degN     , 151p8degE    (Forecast: 20250915000000)\n",
-      " 5. 75W      at 7p2degN     , 105p5degE    (Forecast: 20250915000000)\n",
-      " 6. 76W      at 33p4degN    , 139p5degE    (Forecast: 20250915000000)\n",
-      " 7. 77W      at 16p9degN    , 102p2degE    (Forecast: 20250915000000)\n",
-      " 8. 78W      at 18p1degN    , 126p9degE    (Forecast: 20250915000000)\n",
-      " 9. 80W      at 15p6degN    , 133p3degE    (Forecast: 20250915000000)\n",
-      "10. 70E      at 18p6degN    , -110p7degW   (Forecast: 20250915000000)\n",
-      "11. 71E      at 12p6degN    , -108p8degW   (Forecast: 20250915000000)\n",
-      "12. 72E      at 12p2degN    , -94p1degW    (Forecast: 20250915000000)\n",
-      "13. 74E      at 11p9degN    , -89p4degW    (Forecast: 20250915000000)\n",
-      "14. 72L      at 12p7degN    , -33p1degW    (Forecast: 20250915000000)\n",
-      "15. 73L      at 8p9degN     , -24p7degW    (Forecast: 20250915000000)\n",
-      "16. 75L      at 12p4degN    , -29p1degW    (Forecast: 20250915000000)\n",
-      "17. 76L      at 11p9degN    , -25p2degW    (Forecast: 20250915000000)\n",
-      "18. 77L      at 11p2degN    , -82p5degW    (Forecast: 20250915000000)\n",
-      "19. 78L      at 18p8degN    , -93p2degW    (Forecast: 20250915000000)\n",
-      "20. 79L      at 17p1degN    , -51p7degW    (Forecast: 20250915000000)\n",
-      "21. 70C      at 8p7degN     , -175p7degW   (Forecast: 20250915000000)\n",
-      "22. 72C      at 10p7degN    , -161p5degW   (Forecast: 20250915000000)\n",
-      "23. 73C      at 9p3degN     , -160p9degW   (Forecast: 20250915000000)\n",
-      "24. 70A      at 27p5degN    , 67p7degE     (Forecast: 20250915000000)\n",
-      "25. 70B      at 17p2degN    , 85p2degE     (Forecast: 20250915000000)\n",
-      "26. 71B      at 17p6degN    , 86p6degE     (Forecast: 20250915000000)\n",
-      "27. 72B      at 17p1degN    , 88p3degE     (Forecast: 20250915000000)\n"
+      "   Found 4 tropical cyclone track files\n",
+      "Found 0 unique storms\n",
+      "Found 0 unique storms:\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -117,8 +88,8 @@
    "id": "63307159",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:43:17.495574Z",
-     "start_time": "2025-09-15T08:43:16.067463Z"
+     "end_time": "2025-09-18T12:23:02.928752Z",
+     "start_time": "2025-09-18T12:23:02.235413Z"
     }
    },
    "source": "results = download_tc_data(limit=1, storm_name='MARIO', output_dir='tc_mario')",
@@ -131,20 +102,17 @@
       "Processing 1 forecast(s)\n",
       "Filtering for storm: MARIO\n",
       "\n",
-      "   Found 2 tropical cyclone track files\n",
-      "   Storm: MARIO at 19p1degN, -111p1degW\n",
-      "   Downloaded: A_JSXX01ECEP150000_C_ECMP_20250915000000_tropical_cyclone_track_MARIO_-111p1degW_19p1degN_bufr4.bin (9,445 bytes)\n",
-      "   Downloaded: A_JSXX01ECMF150000_C_ECMP_20250915000000_tropical_cyclone_track_MARIO_-111p1degW_19p1degN_bufr4.bin (915 bytes)\n",
-      "\n",
+      "   Found 0 tropical cyclone track files\n",
+      "   Warning: No tropical cyclone files found for 20250918060000\n",
       "==================================================\n",
       "Summary:\n",
-      "   Successfully downloaded: 2 files\n",
+      "   Successfully downloaded: 0 files\n",
       "   Failed downloads: 0 files\n",
       "   Files saved to: tc_mario/\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -155,21 +123,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:11:33.541228Z",
-     "start_time": "2025-09-16T12:11:32.988106Z"
+     "end_time": "2025-09-18T12:23:03.235096Z",
+     "start_time": "2025-09-18T12:23:02.932706Z"
     }
    },
    "cell_type": "code",
    "source": "from ecmwf_tc_data_extractor import extract_tc_data, extract_tc_data_from_file",
    "id": "d947daee521a3c37",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:11:33.596694Z",
-     "start_time": "2025-09-16T12:11:33.551988Z"
+     "end_time": "2025-09-18T12:23:03.274693Z",
+     "start_time": "2025-09-18T12:23:03.240155Z"
     }
    },
    "cell_type": "code",
@@ -246,7 +214,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -257,8 +225,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:11:33.614448Z",
-     "start_time": "2025-09-16T12:11:33.602628Z"
+     "end_time": "2025-09-18T12:23:03.301238Z",
+     "start_time": "2025-09-18T12:23:03.290404Z"
     }
    },
    "cell_type": "code",
@@ -316,13 +284,13 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:11:33.627998Z",
-     "start_time": "2025-09-16T12:11:33.620644Z"
+     "end_time": "2025-09-18T12:23:03.313794Z",
+     "start_time": "2025-09-18T12:23:03.306394Z"
     }
    },
    "cell_type": "code",
@@ -676,12 +644,12 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -692,8 +660,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:18.381098Z",
-     "start_time": "2025-09-16T12:15:17.966149Z"
+     "end_time": "2025-09-18T12:23:03.567229Z",
+     "start_time": "2025-09-18T12:23:03.352139Z"
     }
    },
    "cell_type": "code",
@@ -710,13 +678,13 @@
    ],
    "id": "b168d081ce1d02c",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:18.406318Z",
-     "start_time": "2025-09-16T12:15:18.386516Z"
+     "end_time": "2025-09-18T12:23:03.606481Z",
+     "start_time": "2025-09-18T12:23:03.587644Z"
     }
    },
    "cell_type": "code",
@@ -762,7 +730,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -773,8 +741,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:19.414653Z",
-     "start_time": "2025-09-16T12:15:19.159380Z"
+     "end_time": "2025-09-18T12:23:03.919059Z",
+     "start_time": "2025-09-18T12:23:03.627438Z"
     }
    },
    "cell_type": "code",
@@ -795,7 +763,7 @@
      }
     }
    ],
-   "execution_count": 3
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -806,8 +774,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:20.381332Z",
-     "start_time": "2025-09-16T12:15:19.966172Z"
+     "end_time": "2025-09-18T12:23:04.336243Z",
+     "start_time": "2025-09-18T12:23:03.948581Z"
     }
    },
    "cell_type": "code",
@@ -835,7 +803,7 @@
      }
     }
    ],
-   "execution_count": 4
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -846,8 +814,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:20.977700Z",
-     "start_time": "2025-09-16T12:15:20.775457Z"
+     "end_time": "2025-09-18T12:23:04.575273Z",
+     "start_time": "2025-09-18T12:23:04.386695Z"
     }
    },
    "cell_type": "code",
@@ -876,7 +844,7 @@
      }
     }
    ],
-   "execution_count": 5
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -887,8 +855,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:23.894742Z",
-     "start_time": "2025-09-16T12:15:23.823149Z"
+     "end_time": "2025-09-18T12:23:04.648213Z",
+     "start_time": "2025-09-18T12:23:04.586284Z"
     }
    },
    "cell_type": "code",
@@ -909,7 +877,7 @@
      }
     }
    ],
-   "execution_count": 6
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -920,8 +888,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-16T12:15:11.995682Z",
-     "start_time": "2025-09-16T12:15:11.753985Z"
+     "end_time": "2025-09-18T12:23:04.895483Z",
+     "start_time": "2025-09-18T12:23:04.652602Z"
     }
    },
    "cell_type": "code",
@@ -942,13 +910,13 @@
      }
     }
    ],
-   "execution_count": 20
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T08:43:21.234518Z",
-     "start_time": "2025-09-15T08:43:21.233390Z"
+     "end_time": "2025-09-18T12:23:04.903959Z",
+     "start_time": "2025-09-18T12:23:04.902679Z"
     }
    },
    "cell_type": "code",
